# gpt-oss-sft

./: .gitignore  accelerate_config.yaml  convert_to_gptoss.py  ds_config.json  inference.py  main.py  merge_adapter.py  pyproject.toml  run_training.sh  run_training_qwen3.sh  test_setup.py  test_training.py  train_gptoss.py  train_gptoss_unsloth.py  train_qwen3_unsloth.py
