[project]
name = "gptoss-ft"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.2.0",
    "datasets>=3.0.0",
    "flash-attn>=2.7.0",
    "peft>=0.14.0",
    "tensorboard>=2.18.0",
    "torch>=2.5.0,<2.10.0",
    "tqdm>=4.67.1",
    "transformers>=4.46.0",
    "trl>=0.12.0,<0.25.0",
    "unsloth>=2025.10.0",
]
